added calculated field instead of text field for team_points. added checkTips api route and function
